@@ -2,13 +2,15 @@ package de.hsnr.inr.sir.algorithm;
 
 import java.util.HashSet;
 import java.util.LinkedList;
-import java.util.List;
 import java.util.PriorityQueue;
 
 import de.hsnr.inr.sir.dictionary.Index;
 import de.hsnr.inr.sir.dictionary.Posting;
+import de.hsnr.inr.sir.query.PhraseQuery;
+import de.hsnr.inr.sir.query.ProximityQuery;
 import de.hsnr.inr.sir.query.Query;
-import de.hsnr.inr.sir.query.QueryTerm;
+import de.hsnr.inr.sir.query.QueryItem;
+import de.hsnr.inr.sir.query.ConcreteQueryTerm;
 
 public class QueryProcessor {
 	
@@ -22,8 +24,8 @@ public class QueryProcessor {
 	public HashSet<Posting> process(Query query){
 		LinkedList<Posting> documents = new LinkedList<Posting>();
 		
-		for(LinkedList<QueryTerm> qtl : query.getAndConjunctions()){
-			documents.addAll(intersectQueryTerm(qtl));
+		for(LinkedList<QueryItem> qil : query.getAndConjunctions()){
+			documents.addAll(intersectQueryTerm(qil));
 		}
 		
 		return new HashSet<Posting>(documents);
@@ -33,54 +35,112 @@ public class QueryProcessor {
 	
 
 
-	private LinkedList<Posting> intersectQueryTerm(LinkedList<QueryTerm> qtl) {
-		switch(qtl.size()){
+	private LinkedList<Posting> intersectQueryTerm(LinkedList<QueryItem> qil) {
+		switch(qil.size()){
 			case 0: throw new IllegalArgumentException("EmptyQuery");
-			case 1: return processSingleQueryTermList(qtl.getFirst());
-			case 2: return processTupleQueryTermList(qtl);
-			default: return processMuliQueryTermList(qtl);
+			case 1: return processSingleQueryItem(qil.getFirst());
+			case 2: return processTupleQueryItemList(qil.get(0), qil.get(1));
+			default: return processMuliQueryItemList(qil);
 				
 		}
 	}
 
-	private LinkedList<Posting> processMuliQueryTermList(LinkedList<QueryTerm> qtl) {
-		PriorityQueue<QueryTerm> terms = getTermsSortedByFrequency(qtl);
+	private LinkedList<Posting> processMuliQueryItemList(LinkedList<QueryItem> qil) {
+		//Filtern
+		LinkedList<ConcreteQueryTerm> qtl = new LinkedList<ConcreteQueryTerm>();
+		LinkedList<PhraseQuery> phql = new LinkedList<PhraseQuery>();
+		LinkedList<ProximityQuery> pql = new LinkedList<ProximityQuery>();
 		LinkedList<Posting> result = new LinkedList<Posting>();
+		
+		assignQueryItemToMatchingList(qil, qtl, phql, pql);
+		//process queryterms
+		PriorityQueue<ConcreteQueryTerm> terms = getTermsSortedByFrequency(qtl);
+		//process phrasequeries
+		//process proximityqueries
+		
+
 		while(!terms.isEmpty()){
-			QueryTerm qt0 = terms.poll();
+			ConcreteQueryTerm qt0 = terms.poll();
 			result = qt0.getPostings();
 			if(!terms.isEmpty()){
-				QueryTerm qt1 = terms.poll();
+				ConcreteQueryTerm qt1 = terms.poll();
 				result = decideAndCallAndMethod(qt0, qt1);
-				terms.add(new QueryTerm(result));
+				terms.add(new ConcreteQueryTerm(result));
 			}
 		}
 		return result;
-		
 	}
 
-	private PriorityQueue<QueryTerm> getTermsSortedByFrequency(LinkedList<QueryTerm> qtl) {
-		PriorityQueue<QueryTerm> terms = new PriorityQueue<QueryTerm>(new QueryTermFrequencyCompartor());
+
+	/**
+	 * Filters the list of query items to process them separately
+	 * @param queryItems
+	 * @param queryTerms
+	 * @param phraseQueries
+	 * @param proximityQueries
+	 */
+	private void assignQueryItemToMatchingList(LinkedList<QueryItem> queryItems, LinkedList<ConcreteQueryTerm> queryTerms,
+			LinkedList<PhraseQuery> phraseQueries, LinkedList<ProximityQuery> proximityQueries){
+		for(QueryItem qi : queryItems){
+			try {
+				if(qi instanceof ConcreteQueryTerm)
+					queryTerms.add((ConcreteQueryTerm) qi);
+				else if(qi instanceof PhraseQuery)
+					phraseQueries.add((PhraseQuery) qi);
+				else if(qi instanceof ProximityQuery)
+					proximityQueries.add((ProximityQuery) qi);
+				else
+					throw new Exception("Couldn't assign QueryItem to a processing list");
+			} catch (Exception e) {
+				System.err.println(e);
+				e.printStackTrace();
+			}
+		}
+	}
+
+	private LinkedList<Posting> processTupleQueryItemList(QueryItem qi1, QueryItem qi2) {
+		if(qi1 instanceof ConcreteQueryTerm && qi2 instanceof ConcreteQueryTerm){
+			ConcreteQueryTerm qt0 = (ConcreteQueryTerm) qi1;	
+			ConcreteQueryTerm qt1 = (ConcreteQueryTerm) qi2;	
+			qt0.setPostingsFromIndex(index);
+			qt1.setPostingsFromIndex(index);
+			
+			return decideAndCallAndMethod(qt0, qt1);
+		}
+		throw new IllegalArgumentException("Couldn't process tuple QueryItem");
+	}
+
+	private LinkedList<Posting> processSingleQueryItem(QueryItem qi) {
+		if(qi instanceof ConcreteQueryTerm){
+			ConcreteQueryTerm qt = (ConcreteQueryTerm) qi;
+			qt.setPostingsFromIndex(index);
+			if(qt.isPositive())
+				return qt.getPostings();
+			else
+				return Intersect.not(qt.getPostings(), index.getPostings());
+		}else if(qi instanceof PhraseQuery){
+			PhraseQuery phq = (PhraseQuery) qi;
+			//TODO: implement this
+		}else if(qi instanceof ProximityQuery){
+			ProximityQuery pq = (ProximityQuery) qi;
+			//TODO: implement this
+		}
+		throw new IllegalArgumentException("Couldn't process QueryItem");
+	}
+
+
+	private PriorityQueue<ConcreteQueryTerm> getTermsSortedByFrequency(LinkedList<ConcreteQueryTerm> qtl) {
+		PriorityQueue<ConcreteQueryTerm> terms = new PriorityQueue<ConcreteQueryTerm>(new QueryTermFrequencyCompartor());
 		
-		for(QueryTerm qt : qtl){
-			getPostingList(qt);
+		for(ConcreteQueryTerm qt : qtl){
+			qt.setPostingsFromIndex(index);
 			terms.add(qt);
 		}
 				
 		return terms;
 	}
 
-	private LinkedList<Posting> processTupleQueryTermList(LinkedList<QueryTerm> qtl) {
-		//TODO: Change List-parameter to tuple
-		QueryTerm qt0 = qtl.get(0);	
-		QueryTerm qt1 = qtl.get(1);	
-		getPostingList(qt0);
-		getPostingList(qt1);
-		
-		return decideAndCallAndMethod(qt0, qt1);
-	}
-	
-	private LinkedList<Posting> decideAndCallAndMethod(QueryTerm qt0, QueryTerm qt1) {
+	private LinkedList<Posting> decideAndCallAndMethod(ConcreteQueryTerm qt0, ConcreteQueryTerm qt1) {
 		if(qt0.isPositive() && qt1.isPositive()) //both positive
 			return Intersect.and(qt0.getPostings(), qt1.getPostings());
 		else if(qt0.isPositive() && !qt1.isPositive()) //qt0 positive, qt1 negative
@@ -92,21 +152,12 @@ public class QueryProcessor {
 		throw new IllegalStateException("Something went terrible wrong!");
 	}
 
-	private LinkedList<Posting> processSingleQueryTermList(QueryTerm qt) {
-		getPostingList(qt);
-		if(qt.isPositive())
-			return qt.getPostings();
-		else
-			return Intersect.not(qt.getPostings(), index.getPostings());
-
-	}
-	
-	
-
-	private void getPostingList(QueryTerm qt){
+	/*
+	private void getPostingList(ConcreteQueryTerm qt){
 		if(qt.isGhost())
-			qt.setPostings(index.getTerm(qt.getName()).getPostings().elementSet());
+			qt.setPostings(index.getTerm(qt.getName()).getPostings());
 	}
+	*/
 	
 	/*
 	private String tupleIntersect(List<QueryTerm> qtl) {
